Fixed problem with background colour not going all the way down the page when in dark mode. Added overflow-y to the saved/custom quote tabs

--- a/quote-generator/src/components/MyQuotes.css
+++ b/quote-generator/src/components/MyQuotes.css
@@ -40,67 +40,44 @@
   margin-bottom: 10px;
   padding: 6px 22px;
   border-radius: 15px;
-  border: solid 3px #212121;
-  background-color: rgb(255, 225, 58);
+  border: none;
+  background-color: rgb(236, 208, 51);
   font-weight: bold;
   transition: all 0.2s linear;
 }
 
-.add-quote-btn:hover {
-  background-color: rgb(251, 231, 115);
-}
-
-.my-quotes-body {
-  margin-bottom: 200px;
-}
-
-/* Quote cards styling */
-
-.quote-card {
+.quote-card-container {
   width: 70vw;
-  height: 120px;
-  margin: 20px 0;
-  display: flex;
-  align-items: center;
-  border: solid 1px #f2f2f2;
-}
-
-.quote-card-section {
-  width: 140px;
+  height: 600px;
+  overflow-y: scroll;
+  background-color: #f2f2f2;
   display: flex;
   justify-content: center;
 }
 
-.quote-avatar {
-  transform: scale(0.7);
+.custom-quotes-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.quote-card-body {
+.custom-quotes-message {
   width: 100%;
+  margin-top: 100px;
+  font-size: 1.7rem;
 }
 
-.remove-btn {
-  width: 36px;
-  height: 36px;
-  margin-left: 30px;
-  font-weight: bold;
-  color: #d3d3d3;
-  background-color: transparent;
-  border: solid 3px #d3d3d3;
-  border-radius: 50px;
+.create-quote-link {
+  width: 230px;
+  margin-top: 20px;
+  font-size: 1.7rem;
+  text-align: center;
+  cursor: pointer;
+  color: rgb(236, 208, 51);
 }
 
-.remove-btn:hover {
-  color: #d33f3f;
-  border: solid 1px #d33f3f;
-}
-
-.quote-card-text {
-  padding: 6px;
-}
-
-.quote-card-author {
-  padding: 6px;
+.quote-cards {
+  margin-bottom: 200px;
 }
 
 /* Dark mode styling */
@@ -115,6 +92,10 @@
   color: #ffffff;
 }
 
+.my-quotes-dark h2 {
+  color: #ffffff;
+}
+
 .my-quotes-dark .add-quote-btn {
   color: #212121;
 }
@@ -123,18 +104,10 @@
   color: #212121;
 }
 
-.quote-card-dark {
-  width: 70vw;
-  height: 120px;
-  margin: 20px 0;
-  display: flex;
-  align-items: center;
-  border: solid 1px #3f3f3f;
-}
-.quote-card-dark h4 {
-  color: #ffffff;
+.my-quotes-dark .quote-card-container {
+  background-color: #3f3f3f;
 }
 
-.quote-card-dark p {
-  color: #ffffff;
+.my-quotes-dark .create-quote-link {
+  color: rgb(236, 208, 51);
 }
